@@ -1,0 +1,12 @@
+
+/* pngpriv.h - private declarations for use inside libpng
+ *
+ * libpng version 1.2.41beta14 - November 3, 2009
+ * For conditions of distribution and use, see copyright notice in png.h
+ * Copyright (c) 1998-2009 Glenn Randers-Pehrson
+ * (Version 0.96 Copyright (c) 1996, 1997 Andreas Dilger)
+ * (Version 0.88 Copyright (c) 1995, 1996 Guy Eric Schalnat, Group 42, Inc.)
+ */
+
+/* This is a placeholder for a header file that is introduced in
+ * libpng-1.4.0 */
